--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +11,7 @@
     {#          href="https://i.fbcd.co/products/resized/resized-750-500/ae2d64e634f5beaa6f0e867d529ece28f0504e9e24fc4d5e0d6fd21f0a05df7f.webp">#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        #content {
-            min-height: 100vh;
-        }
-    </style>
+    <link href="{% static 'styles/index.css' %}" rel="stylesheet">
 </head>
 <body>
 
@@ -54,6 +51,9 @@
                     <a href="{% url 'logout' %}" class="text-white">Log out</a>
                 {% endif %}
             </p>
+            {% if  request.user.profile.profile_picture.url %}
+                <img class="profile-picture-nav" src="{{ request.user.profile.profile_picture.url }}" alt="profile">
+            {% endif %}
         </div>
 
     </div>
