--- a/templates/edit_user_profile.html
+++ b/templates/edit_user_profile.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post" action="{% url 'edit_user_profile' %}"
+    <form enctype="multipart/form-data" method="post" action="{% url 'edit_user_profile' %}"
           class="text-white d-flex flex-column w-25 gap-2"
           id="edit-profile-form">
 
