--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,17 +24,17 @@
                    class="text-white link-underline link-underline-opacity-0 fst-italic">Litera</a>
             </h4>
 
-            <form method="get" class="d-flex  justify-content-between" action="{% url 'search' %}">
-                <input type="text" name="query" placeholder="Search for a book or an author..."
-                       class="text-start w-100" value="{{ search_text }}" required>
-                <button type="submit">Search</button>
-            </form>
+
         </div>
 
         <div class="navbar-nav">
             <a class="nav-link text-white" href="{% url 'index' %}">Home</a>
             <a class="nav-link text-white" href="{% url 'list_books' %}">Books</a>
             <a class="nav-link text-white" href="{% url 'list_authors' %}">Authors</a>
+            <a class="nav-link text-white" href="{% url 'search' %}">Search</a>
+            {% if request.user.is_authenticated %}
+                <a class="nav-link text-white" href="{% url 'my_reading_list' %}">My Reading List</a>
+            {% endif %}
         </div>
 
         <div id="user-info" class="d-flex justify-content-center">
