--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-black opacity-75 align-items-md-center">
+<nav class="navbar navbar-expand-md navbar-dark bg-black opacity-75 ">
     <div class="container-md">
 
         <!-- Logo -->
@@ -30,7 +30,6 @@
         <!-- Links -->
         <div class="collapse navbar-collapse " id="links-collapse">
             <ul class="navbar-nav ms-auto" id="ul-b">
-                <li class="d-flex align-items-center"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
                 <li class="d-flex align-items-center"><a class="nav-link" href="{% url 'list_books' %}">Books</a></li>
                 <li class="d-flex align-items-center"><a class="nav-link" href="{% url 'list_authors' %}">Authors</a>
                 </li>
