--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-black opacity-75 ">
+<nav class="navbar navbar-expand-md navbar-dark bg-black bg-opacity-75 ">
     <div class="container-md">
 
         <!-- Logo -->
-        <a href="{% url 'index' %}"
+        <a href="{% url 'index' %}" id="logo"
            class="navbar-brand fst-italic">Litera</a>
 
         <!-- Dropdown button for the menu on smaller screens -->
@@ -45,7 +45,7 @@
                            href="{% url 'user_profile' request.user.id %}">Hello, {{ request.user }}!</a>
                     </li>
                     <li class="my-3 my-md-auto ms-md-1 me-md-3">
-                        <a href="{% url 'logout' %}" class="btn btn-dark ">Log out</a>
+                        <a href="{% url 'logout' %}" class="btn btn-danger ">Log out</a>
                     </li>
 
                     {% if  request.user.profile.profile_picture.url %}
@@ -55,7 +55,7 @@
                     {% endif %}
                 {% else %}
                     <li class="my-md-auto">
-                        <a href="{% url 'login' %}" class="btn btn-dark ">Log in</a></li>
+                        <a href="{% url 'login' %}" class="btn btn-danger ">Log in</a></li>
                 {% endif %}
 
             </ul>
@@ -68,10 +68,12 @@
 
 
 <!-- Main content -->
-<div class="bg-dark d-flex justify-content-center pt-4" id="content">
-    {% block content %}
+<div class="bg-dark pt-4 text-white" id="content">
+    <div class="container">
+        {% block content %}
 
-    {% endblock %}
+        {% endblock %}
+    </div>
 </div>
 
 
